--- a/assets/stock_styles.css
+++ b/assets/stock_styles.css
@@ -1,11 +1,11 @@
 :root {
     --verde: #92bb49;
-    --cinza: #e6e6e6;
     --azul: #081f44;
+    --cinza: #d0d0d0;
 }
 
 .block-container {
-    padding-top: 2rem;
+    padding-top: 1.5rem;
     padding-bottom: 0rem;
     padding-left: 5rem;
     padding-right: 5rem;
@@ -13,10 +13,4 @@
 
 .stSidebar .stElementToolbar {
     visibility: hidden;
-}
-
-div.stMetric {
-    border-radius: 10px;
-    background-color: var(--cinza);
-    padding: 10px;
 }
