--- a/assets/tl_styles.css
+++ b/assets/tl_styles.css
@@ -5,7 +5,7 @@
 }
 
 .block-container {
-    padding-top: 5rem;
+    padding-top: 4rem;
     padding-bottom: 0rem;
     padding-left: 5rem;
     padding-right: 5rem;
@@ -13,4 +13,24 @@
 
 .stSidebar .stElementToolbar {
     visibility: hidden;
+}
+
+label[data-testid="stMetricLabel"] {
+    color: whitesmoke;
+}
+
+div[data-testid="stMetricValue"] > div {
+    color: whitesmoke;
+}
+
+div.stMetric {
+    background-color: var(--azul);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.stColumn {
+    background-color: var(--cinza);
+    padding: 10px;
+    border-radius: 10px;
 }
