--- a/assets/home_styles.css
+++ b/assets/home_styles.css
@@ -29,7 +29,7 @@ div[data-testid="stMetricValue"] > div {
     color: whitesmoke;
 }
 
-.stColumn {
+.stMain .stColumn {
     background-color: var(--cinza);
     padding: 10px;
     border-radius: 10px;
