--- a/assets/tl_styles.css
+++ b/assets/tl_styles.css
@@ -29,7 +29,7 @@ div.stMetric {
     padding: 10px;
 }
 
-.stColumn {
+.stMain .stColumn {
     background-color: var(--cinza);
     padding: 10px;
     border-radius: 10px;
