--- a/assets/tl_styles.css
+++ b/assets/tl_styles.css
@@ -34,3 +34,7 @@ div.stMetric {
     padding: 10px;
     border-radius: 10px;
 }
+
+.stSidebar button[data-testid="stBaseButton-secondary"] {
+    width: 100%;
+}
